feat: register card backend connection

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,9 +139,15 @@
 
 @layer utilities {
   @keyframes float {
-    0% { transform: translateY(0px); }
-    50% { transform: translateY(-25px); }
-    100% { transform: translateY(0px); }
+    0% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(-25px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
   }
 
   .animate-float {
